--- a/src/index.css
+++ b/src/index.css
@@ -150,7 +150,7 @@ li {
 }
 .forcast_list .list img {
   width: 30px;
-  margin: 3px 0;
+  margin: 3px auto;
 }
 .forcast_list .list span {
   display: block;
